Show Users with projects, filter by rut.
