# src/views/user.py
@@ -2,12 +2,16 @@
 This module contains functions for handling requests from projects.
 """
 
-from flask import request
 from models import User
-from schemas import UserSchema
+from schemas import UserSchema, UserWithProjectSchema
 
 user = User()
-user_schema = UserSchema()
+schema = UserSchema()
+uwp_schema = UserWithProjectSchema()
 
-def get_all():
-    return user_schema.dump(user.fetch_all(), many=True), 200
+def get_all() -> list['User']:
+    return schema.dump(user.fetch_all(), many=True), 200
+
+def get_by_rut(rut:str) -> list:
+    return uwp_schema.dump(user.fetch_by_rut(rut), many=True), 
+    
